Add binaries to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ CMakeCache.txt
 CTestTestfile.cmake
 Makefile
 CMakeFiles
+benchmark_bit-vector
+libhsds-bitvector.1.0.0.dylib
+libhsds-bitvector.1.dylib
+libhsds-bitvector.dylib
+test_bit-vector
