Improved SSE4.2 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,13 @@ INCLUDE(FindSSE)
 FindSSE ()
 IF(SSE3_FOUND)
     IF(SSSE3_FOUND)
-        SET(CXX_DFLAGS -DHSDS_USE_SSE3 -mssse3)
+            SET(CXX_DFLAGS -DHSDS_USE_SSE3 -msse3 -mssse3)
     ENDIF(SSSE3_FOUND)
 ENDIF(SSE3_FOUND)
 
-IF(SSE4_1_FOUND)
-#    SET(CXX_DFLAGS ${CXX_DFLAGS} -DHSDS_USE_POPCNT -msse4.1 -mpopcnt)
-ENDIF(SSE4_1_FOUND)
+IF(SSE4_2_FOUND)
+        SET(CXX_DFLAGS ${CXX_DFLAGS} -DHSDS_USE_POPCNT -msse4.2 -mpopcnt)
+ENDIF(SSE4_2_FOUND)
 ADD_DEFINITIONS(${CXX_DFLAGS})
 
 INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
