Change error message

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O3")
 
-SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
+SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -D_DEBUG")
 
 SET(CMAKE_BUILD_TYPE Release)
 
