Change public headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ SET_TARGET_PROPERTIES(hsds-bitvector PROPERTIES VERSION ${serial} SOVERSION ${so
 
 INSTALL(TARGETS hsds-bitvector DESTINATION lib)
 
-INSTALL(FILES include/hsds/bit-vector.hpp include/hsds/popcount.hpp include/hsds/rank-index.hpp DESTINATION include/hsds)
+INSTALL(FILES include/hsds/bit-vector.hpp include/hsds/exception.hpp DESTINATION include/hsds)
 
 
 # Testing
