Use igloo as testing framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ IF(SSE4_2_FOUND)
 ENDIF(SSE4_2_FOUND)
 ADD_DEFINITIONS(${CXX_DFLAGS})
 
-INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
+INCLUDE_DIRECTORIES(include extlib/igloo)
 
 ADD_LIBRARY(hsds-bitvector SHARED src/bit-vector.cpp)
 
