Change public headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,9 @@ SET_TARGET_PROPERTIES(hsds-bitvector PROPERTIES VERSION ${serial} SOVERSION ${so
 
 INSTALL(TARGETS hsds-bitvector DESTINATION lib)
 
-SET(INSTALL_HEADERS include/hsds/bit-vector.hpp include/hsds/intrin.h include/hsds/exception.hpp)
-SET(INSTALL_HEADERS ${INSTALL_HEADERS} include/hsds/popcount.hpp include/hsds/rank-index.hpp)
+SET(INSTALL_HEADERS include/hsds/bit-vector.hpp include/hsds/exception.hpp include/constants.hpp)
+SET(INSTALL_HEADERS ${INSTALL_HEADERS} include/hsds/rank-index.hpp include/vector.hpp)
+SET(INSTALL_HEADERS ${INSTALL_HEADERS} include/hsds/scoped_ptr.hpp include/scoped_array.hpp)
 
 INSTALL(FILES ${INSTALL_HEADERS} DESTINATION include/hsds)
 
