Fixed unstable configuration of CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,9 @@
 SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O3")
-
-SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -D_DEBUG")
-
-SET(CMAKE_BUILD_TYPE Release)
+IF(NOT DEFINED  CMAKE_BUILD_TYPE)
+   SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build")
+ENDIF(NOT DEFINED CMAKE_BUILD_TYPE)
 
 PROJECT(HSDS CXX)
 
@@ -13,6 +11,10 @@ SET(serial "1.0.0")
 
 SET(soserial "1")
 
+SET(CMAKE_CXX_FLAGS "-Wall")
+SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
+SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
+SET(CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG")
 
 INCLUDE(FindSSE/FindSSE)
 FindSSE ()
